[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "sieve-app-demo"
version = "0.1.0"
description = "Demo app that depends on sieve-core."
requires-python = ">=3.11"
dependencies = [
  "sieve-core-dummy @ git+https://github.com/sievestack/sieve-core-dummy@95c784dc17f4157fe465bf397905239638f9eadd"
]

[tool.hatch.metadata]
allow-direct-references = true

